--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-aiohttp==3.9.4
+aiohttp==3.9.5
 aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.1.0
-discord.py==2.3.1
-frozenlist==1.3.3
+async-timeout==4.0.3
+attrs==23.2.0
+frozenlist==1.4.1
 idna==3.7
-multidict==6.0.4
-requests==2.31.0
-urllib3==2.0.7
-yarl==1.9.2
+multidict==6.0.5
+python-dateutil==2.9.0.post0
+six==1.16.0
+twitchAPI==4.2.0
+typing_extensions==4.12.1
+yarl==1.9.4
